2010-03-04  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/dir.c (includedir, incfile): Cast size_t value to integer
	for use as a *printf() precision argument.

	* src/fscanner.l, src/scanner.l: Tolerate C++ :: scope operator
	inside argument lists, too.

2009-12-21  Neil Horman <nhorman@tuxdriver.com>
	* src/main.c: Added some more missing short options to parse_options

2009-12-14  Neil Horman <nhorman@tuxdriver.com>
	* src/main.c: Added missing line mode operation options to
	parse_arguments

2009-12-14  Neil Horman <nhorman@tuxdriver.com>
	* src/main.c: Fixed adjustments to argc/argv in parse_option to account
	for the possibility that someone might specify multiple options in
	one argument (-ab vs. -a -b)

2009-12-09  Neil Horman <nhorman@tuxdriver.com>

	* src/main.c: Added a new parse_options implementation to make option
	parsing more sane and safe for systems which support getopt_long.  Also
	added a check to make sure that single character options didn't specify 
	trailing data (sf bug 2911623)

	* AUTHORS: Fixed my email address

2009-08-28  Neil Horman <nhorman@tuxdriver.com>

	* src/scanner.h: Added a LEXERR token to be returned if a lexer error
	occurs

	* src/crossref.c: Check for LEXERR token, and abort processing file if
	lexer error occurs

	* src/fcanner.l: check the statue of my_yytext on = and : symbols.  If
	its NULL consider that a lexer error.  This can occur if input files are
	provided that contain only a '=' or ':' symbol.  Without the ability to
	detect and return a lexer error, we get a segfault.

2009-05-06  Neil Horman <nhorman@tuxdriver.com>

	* src/main.c: Fixed string length checks to avoid overflow

2009-04-30  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>

	* src/version.h (FILEVERSION, FIXVERSION): Version number changed
	to 15.7a.

	* configure.in: Version number changed to 15.7a.

	* configure (all): Regenerated.

2009-04-10  Hans-Bernhard Broeker  <broeker@physik.rwth-achen.de>
